--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,7 +11,9 @@
   background-color: white;
 }
 
-.nav-h1 i {
+.nav-h1 img {
+  width: 50px;
+  height: 30px;
   border-right: 1px solid black;
   padding-right: 20px;
   margin-right: 15px;
@@ -30,11 +32,10 @@
   display: flex;
   align-items: center;
   background-color: #efefef;
-  padding: 6px;
   border-radius: 10px;
 
-  i {
-    font-size: 25px;
+  img {
+    width: 20px;
     margin: 10px;
     color: rgb(173, 173, 173);
   }
@@ -49,13 +50,14 @@
 }
 
 /*Nav bar icons*/
-.nav-icons {
+.nav-images {
   width: 200px;
   display: flex;
   justify-content: space-evenly;
   font-size: 30px;
 
-  i {
+  img {
+    width: 30px;
     color: rgb(0, 0, 0);
     font-style: normal;
   }
