--- a/src/pages/JHso/Main/components/Feed/Feed.scss
+++ b/src/pages/JHso/Main/components/Feed/Feed.scss
@@ -29,7 +29,7 @@
   height: 600px;
   border: 1px solid #e9e9e9;
   margin-top: 50px;
-
+  background-color: #ffffff;
   .imgtop {
     display: flex;
     align-items: center;
