--- a/src/pages/JHso/Main/components/RightFeed/RightFeed.scss
+++ b/src/pages/JHso/Main/components/RightFeed/RightFeed.scss
@@ -41,6 +41,7 @@
     overflow: hidden;
     font-size: small;
     position: relative;
+    background-color: #ffffff;
   }
   .pcenter {
     display: flex;
@@ -94,6 +95,7 @@
   width: 250px;
   height: 150px;
   position: relative;
+  background-color: #ffffff;
 
   .pcenter {
     display: flex;
