Add : Mission 1,2 - 사용자 입력 데이터 저장 기능 구현 & 로그인 버튼 활성화 기능 구현

--- a/src/pages/JHkim/Login/Login.scss
+++ b/src/pages/JHkim/Login/Login.scss
@@ -10,7 +10,7 @@
     width: 550px;
     margin: auto;
     text-align: center;
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
     border: 1px solid rgb(233, 233, 233);
     box-shadow: 0px 0px 20px 5px rgba(239, 255, 21, 0.2);
     background-color: #fff;
@@ -30,7 +30,7 @@
   font-family: 'Noto Sans KR', sans-serif;
 
   input {
-    height: 30px;
+    height: 50px;
     margin-top: 15px;
     padding: 10px;
     border: 1px solid rgb(209, 209, 209);
@@ -47,7 +47,6 @@
     border: none;
     border-radius: 8px;
     background-color: #a4dcff;
-    cursor: no-drop;
     color: #fff;
     font-size: 20px;
     font-weight: 900;
