--- a/src/pages/JHso/Login/Login.scss
+++ b/src/pages/JHso/Login/Login.scss
@@ -21,6 +21,39 @@ body {
   background-color: #ffffff;
   width: 400px;
   height: 450px;
+  .loginSection {
+    display: flex;
+    flex-direction: column;
+    margin: 60px;
+
+    input {
+      padding: 10px;
+      margin-top: 10px;
+      width: 280px;
+      background-color: #fafafa;
+      border: 1px solid #efefef;
+    }
+    .loginbutton {
+      margin-top: 50px;
+
+      .buttonLogin {
+        width: 280px;
+        height: 30px;
+        background-color: #0095f6;
+        color: #efefef;
+        border-radius: 3px;
+        border-color: transparent;
+      }
+      .buttonLoginDisabled {
+        width: 280px;
+        height: 30px;
+        background-color: #b2dffc;
+        color: #efefef;
+        border-radius: 3px;
+        border-color: transparent;
+      }
+    }
+  }
 
   .loginTitle {
     font-size: 50px;
