MODIFY: sider 리뷰 수정사항 반영

--- a/src/pages/SYha/Main/Main.scss
+++ b/src/pages/SYha/Main/Main.scss
@@ -251,7 +251,7 @@
   }
 
   .story,
-  .recommandation {
+  .recommendation {
     height: 35%;
     border: 1.5px solid $lineColor;
     overflow: auto;
