--- a/src/pages/JSham/Login/Login.scss
+++ b/src/pages/JSham/Login/Login.scss
@@ -1,18 +1,18 @@
 .main {
-  align-items: stretch;
+  align-items: center;
   box-sizing: border-box;
   display: flex;
   padding: 0;
   justify-content: center;
-  margin: 100px auto 0;
-  padding-bottom: 32px;
+  padding-top: 80px;
 
   .wrap {
     display: flex;
     border: 1px solid #dbdbdb;
     justify-content: center;
+    align-items: center;
     margin: 0 0 10px;
-    padding: 30px 0;
+    padding: 40px 0;
     display: flex;
   }
 
@@ -28,17 +28,14 @@
     font-size: 45px;
     font-weight: lighter;
     width: 300px;
+    padding-bottom: 30px;
   }
 
   .id,
   .password,
-  .button {
-    margin: 0 40px 6px;
-  }
-
-  input {
-    max-width: 100%;
-    max-height: 100%;
+  button {
+    margin: 10px 40px 6px;
+    width: 71%;
   }
 
   button {
@@ -46,9 +43,7 @@
     border: none;
     color: white;
     text-align: center;
-    margin: 0 40px 6px;
     cursor: pointer;
-    width: 75%;
   }
 
   .login {
