--- a/src/pages/SYha/Main/components/Aside_right/Wecode.scss
+++ b/src/pages/SYha/Main/components/Aside_right/Wecode.scss
@@ -1,6 +1,6 @@
-@import '../../styles/mixin.scss';
-@import '../../styles/variables.scss';
-@import '../../styles/common.scss';
+@import '../../../styles/mixin.scss';
+@import '../../../styles/variables.scss';
+@import '../../../styles/common.scss';
 
 .wecode {
   width: 75%;
