--- a/src/pages/SYha/Main/components/Aside_left.scss
+++ b/src/pages/SYha/Main/components/Aside_left.scss
@@ -12,7 +12,7 @@
   background-color: white;
 
   .feedhead {
-    height: 8.5%;
+    height: 8%;
     padding: 10px;
     position: relative;
     font-size: 17px;
@@ -32,14 +32,15 @@
       right: 10px;
     }
   }
+
   .feedimg {
-    height: 65%;
+    height: 63%;
     margin: 0px;
     object-fit: cover;
   }
 
   .reaction_icon_wrap {
-    height: 6%;
+    height: 5%;
     padding: 0px 10px;
     position: relative;
 
@@ -48,15 +49,21 @@
       height: 18px;
       margin: 5px 8px;
     }
+
     .saveicon {
       position: absolute;
       right: 10px;
     }
   }
+
   .show_like_wrap {
-    height: 4%;
+    height: 3%;
     padding: 0px 5px;
     font-size: 12.5px;
+
+    strong {
+      font-weight: 700;
+    }
 
     .friendProfile_img {
       width: 20px;
@@ -65,62 +72,60 @@
       border-radius: 100px;
     }
   }
-  .feed_discription_wrap,
-  .comment_list {
-    margin-left: 10px;
+
+  .feed_discription_wrap {
+    margin: 2px 10px;
     font-size: 12.5px;
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    max-height: 70px;
 
     .discription {
-      margin: 3px;
+      margin: 5px 3px;
       position: relative;
-    }
-    .timecount {
-      color: $lineColor;
-      margin: 0px 4px;
+
+      strong {
+        font-weight: 700;
+      }
     }
 
+    // .timecount {
+    //   color: $lineColor;
+    //   margin: 0px 4px;
+    // }
+  }
+  .comment_wrap {
+    overflow: auto;
+    max-height: 60px;
+  }
+  .addcomment {
+    font-size: 15px;
+    width: 100%;
+    position: relative;
+    position: absolute;
+    bottom: 0px;
+
+    .commentinputbox {
+      width: 100%;
+      border-style: none;
+      height: 45px;
+      border-top: 1px solid $lineColor;
+      padding: 10px;
+    }
+
+    .button:disabled {
+      color: #c4e1fb;
+    }
     .button {
       background: white;
-      color: #c4e1fb;
+      color: #64acf3;
       border: none;
       padding: 0;
       font: inherit;
+      font-weight: 600;
       cursor: pointer;
       outline: inherit;
       position: absolute;
       right: 20px;
       top: 40%;
     }
-  }
-}
-.addcomment {
-  font-size: 15px;
-  width: 100%;
-  position: relative;
-  position: absolute;
-  bottom: 0px;
-  .commentinputbox {
-    width: 100%;
-    border-style: none;
-    height: 50px;
-    border-top: 1px solid $lineColor;
-    padding: 10px;
-  }
-  .button {
-    background: white;
-    color: #c4e1fb;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    position: absolute;
-    right: 20px;
-    top: 40%;
   }
 }
 
