--- a/src/pages/SYha/Main/components/Aside_right/Story.scss
+++ b/src/pages/SYha/Main/components/Aside_right/Story.scss
@@ -1,8 +1,8 @@
-@import '../../styles/mixin.scss';
-@import '../../styles/variables.scss';
-@import '../../styles/common.scss';
+@import '../../../styles/mixin.scss';
+@import '../../../styles/variables.scss';
+@import '../../../styles/common.scss';
 
-.recommendation {
+.story {
   height: 30%;
   border: 1.5px solid $lineColor;
   margin-top: 10px;
@@ -20,7 +20,6 @@
   .top_title > p:first-child {
     color: #9d9d9d;
   }
-
   .instagramlist_wrap {
     overflow: auto;
     height: 80%;
@@ -28,10 +27,11 @@
     flex-direction: column;
     padding-top: 5px;
 
-    .instagramlist {
+    .instagralist {
       display: flex;
       font-size: 12px;
-      padding-left: 10px;
+      padding: 3px 10px 3px;
+      align-items: center;
       position: relative;
       height: 35px;
 
@@ -40,23 +40,8 @@
         width: 30px;
         height: 30px;
         margin-right: 15px;
-      }
-      .whofollow {
-        display: inline-block;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 110px;
-        height: 20px;
-      }
-      .follow {
-        color: #3897f0;
-        position: relative;
-        border: none;
-        background: none;
-        padding: 0;
-        position: absolute;
-        right: 10px;
+        padding: 1.5px;
+        border: 1.5px solid #d301c5;
       }
     }
   }
