--- a/src/pages/SYha/Main/components/Nav.scss
+++ b/src/pages/SYha/Main/components/Nav.scss
@@ -7,7 +7,8 @@
   height: 8%;
   justify-content: center;
   border-bottom: 1.5px solid $lineColor;
-
+  position: absolute;
+  width: 100vw;
   .inner {
     width: 80%;
     justify-content: space-between;
