--- a/src/pages/SYha/Main/components/Aside_left/Newcomment.scss
+++ b/src/pages/SYha/Main/components/Aside_left/Newcomment.scss
@@ -2,9 +2,16 @@
   margin: 2px 13px;
   font-size: 12.5px;
   display: flex;
-
-  strong {
-    font-weight: 700;
-    margin-right: 8px;
+  justify-content: space-between;
+  .idAndComment {
+    display: flex;
+    strong {
+      font-weight: 700;
+      margin-right: 8px;
+    }
+  }
+  span {
+    // opacity: 0;
+    cursor: pointer;
   }
 }
