Add: Mission2 - 로그인 버튼 활성화 기능 구현

--- a/src/pages/JSham/Login/Login.scss
+++ b/src/pages/JSham/Login/Login.scss
@@ -35,15 +35,8 @@
   .password,
   button {
     margin: 10px 40px 6px;
-    width: 71%;
-  }
-
-  button {
-    background-color: #0095f6;
-    border: none;
-    color: white;
-    text-align: center;
-    cursor: pointer;
+    width: 72%;
+    height: 15%;
   }
 
   .login {
@@ -83,5 +76,17 @@
   }
   a {
     text-decoration: none;
+  }
+  .loginbtn_disabled {
+    background-color: #c4e1fb;
+    border: 1px solid white;
+    color: white;
+    font-size: 20px;
+  }
+  .loginbtn {
+    background-color: #0095f6;
+    border: 1px solid white;
+    color: white;
+    font-size: 20px;
   }
 }
