[data 활용] Assignment 2 미션 완료

--- a/src/pages/JHkim/Main/Components/CommentLi.scss
+++ b/src/pages/JHkim/Main/Components/CommentLi.scss
@@ -20,6 +20,30 @@
     color: red;
     cursor: pointer;
   }
+}
+.article-comment {
+  padding: 10px;
 
-  /*댓글 li 좋아요 button style*/
+  input {
+    width: 470px;
+    outline: none;
+    border: none;
+  }
+}
+
+.comment-input-wrap form {
+  display: flex;
+  align-items: center;
+  padding-top: 5px;
+  margin-top: 5px;
+  border-top: 1px solid #efefef;
+
+  button {
+    width: 50px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 900;
+    color: #0095f6;
+    background-color: rgba(178, 164, 255, 0.2);
+  }
 }
