--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -13,4 +13,15 @@
     justify-content: center;
     align-items: center;
   }
+
+  .img_size {
+    height: 30px;
+    margin: 5px;
+  }
+
+  .emphasis {
+    font-weight: 600;
+    font-size: 17px;
+    padding-left: 15px;
+  }
 }
