MODIFY:Nav bar Z-index 추가

--- a/src/pages/SYha/Main/Main.scss
+++ b/src/pages/SYha/Main/Main.scss
@@ -3,9 +3,11 @@
 @import '../styles/variables.scss';
 @import '../styles/common.scss';
 
+body {
+  background-color: #fafafa;
+}
 .mainwrap {
   height: 100vh;
-  background-color: #fafafa;
 
   .main {
     justify-content: center;
