Mock Data활용하여 피드구현

--- a/src/pages/JHso/Main/components/Feed/CommentList.scss
+++ b/src/pages/JHso/Main/components/Feed/CommentList.scss
@@ -1,9 +1,10 @@
 .commentList {
   overflow: auto;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   margin-left: 7px;
+
   .userName {
     font-weight: 700;
   }
