--- a/src/pages/JHso/Main/components/Feed/Feed.scss
+++ b/src/pages/JHso/Main/components/Feed/Feed.scss
@@ -1,87 +1,90 @@
 .feeds {
   width: 400px;
-  border: 1px solid #e9e9e9;
   margin-top: 50px;
-  background-color: #ffffff;
-  .imgtop {
-    display: flex;
-    align-items: center;
-    width: 400px;
-    height: 40px;
-    border: 0px solid #e9e9e9;
-    font-weight: 700;
-    font-size: small;
-
-    .porfile {
-      border-radius: 100%;
-      width: 30px;
-      height: 30px;
-      margin-right: 10px;
-      width: 30px;
-    }
-
-    .porfilemenu {
-      margin-left: 290px;
-      width: 30px;
-    }
-  }
-
-  .article {
-    width: 400px;
-    height: 400px;
+  margin-bottom: 30px;
+  .FeedTwo {
+    background-color: #ffffff;
+    margin-bottom: 100px;
     border: 1px solid #e9e9e9;
+    .imgtop {
+      display: flex;
+      align-items: center;
+      width: 400px;
+      height: 40px;
+      border: 0px solid #e9e9e9;
+      font-weight: 700;
+      font-size: medium;
+      .porfile {
+        border-radius: 100%;
+        width: 30px;
+        height: 30px;
+        margin-right: 10px;
+        width: 30px;
+      }
 
-    .articleImg {
-      width: 398px;
+      .porfilemenu {
+        margin-left: 290px;
+        width: 30px;
+      }
+    }
+
+    .article {
+      width: 400px;
       height: 400px;
-    }
-  }
+      border: 1px solid #e9e9e9;
 
-  .articleicon {
-    display: flex;
-    width: 103%;
-    height: 30px;
-    align-items: center;
-    position: relative;
-
-    .aicon {
-      width: 20px;
-      height: 20px;
-      margin: 5px 8px;
+      .articleImg {
+        width: 398px;
+        height: 400px;
+      }
     }
 
-    .save {
-      position: absolute;
-      right: 10px;
+    .articleicon {
+      display: flex;
+      width: 103%;
+      height: 30px;
+      align-items: center;
+      position: relative;
+
+      .aicon {
+        width: 20px;
+        height: 20px;
+        margin: 5px 8px;
+      }
+
+      .save {
+        position: absolute;
+        right: 10px;
+      }
     }
-  }
 
-  .articleText {
-    display: flex;
-    align-items: center;
-    font-weight: 700;
-    font-size: small;
-    margin-left: 7px;
+    .articleText {
+      display: flex;
+      align-items: center;
+      font-weight: 700;
+      font-size: small;
+      margin-left: 7px;
 
-    .porfileArticle {
-      border-radius: 100%;
-      width: 20px;
-      height: 20px;
+      .porfileArticle {
+        border-radius: 100%;
+        width: 20px;
+        height: 20px;
+      }
     }
-  }
 
-  .articleTextButton {
-    font-weight: 700;
-    font-size: small;
-    align-items: center;
-    margin-left: 7px;
+    .articleTextButton {
+      font-weight: 700;
+      font-size: small;
+      align-items: center;
+      margin-left: 7px;
 
-    .imog {
-      width: 20px;
-      height: 20px;
-    }
-    .gray {
-      color: #c1c0c0;
+      .imog {
+        width: 20px;
+        height: 20px;
+      }
+      .gray {
+        color: #c1c0c0;
+      }
     }
   }
 }
