--- a/src/pages/JHso/Main/components/Feed/Feed.scss
+++ b/src/pages/JHso/Main/components/Feed/Feed.scss
@@ -7,6 +7,7 @@
     margin-bottom: 100px;
     border: 1px solid #e9e9e9;
     .imgtop {
+      margin-top: 5px;
       display: flex;
       align-items: center;
       width: 400px;
@@ -54,7 +55,7 @@
 
       .save {
         position: absolute;
-        right: 10px;
+        right: 5px;
       }
     }
 
