--- a/src/pages/JHso/Main/components/Feed/InputComment.scss
+++ b/src/pages/JHso/Main/components/Feed/InputComment.scss
@@ -13,18 +13,18 @@
     }
     .replyButton {
       position: absolute;
-      right: 20px;
-      top: 22px;
-      border: 0;
+      right: 10px;
+      top: 21px;
+      border: none;
       outline: none;
       background: none;
       color: #0088ff;
     }
     .replyButtondisabled {
       position: absolute;
-      right: 20px;
-      top: 22px;
-      border: 0;
+      right: 10px;
+      top: 21px;
+      border: none;
       outline: none;
       background: none;
       color: #c4e1fb;
