추천부분 수정

--- a/src/components/MainRight/MainRight.scss
+++ b/src/components/MainRight/MainRight.scss
@@ -5,11 +5,11 @@
 
   .recommendId {
     display: inline;
-    margin-bottom: 10px;
+    padding-bottom: 30px;
   }
 
   .recommendList {
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
   }
 
