수정: 함수명 - 카멜케이스, (C컴포넌트명, 파일명, 클래스명) - 파스칼케이스

--- a/src/pages/JHkim/Login/Components/LoginBtn.scss
+++ b/src/pages/JHkim/Login/Components/LoginBtn.scss
@@ -1,4 +1,4 @@
-.submitButton {
+.LoginBtn {
   width: 400px;
   height: 55px;
   margin-top: 30px;
@@ -10,7 +10,7 @@
   font-weight: 900;
 }
 
-.submitButton.validated {
+.Validated {
   background-color: #0095f6;
   cursor: pointer;
 }
