--- a/src/pages/JHkim/Main/Components/MainRight.scss
+++ b/src/pages/JHkim/Main/Components/MainRight.scss
@@ -1,8 +1,8 @@
-.main-right-wrap {
+.MainRightWrap {
   margin-left: 100px;
   width: 250px;
 
-  .right-profile {
+  .RightProfile {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
