--- a/src/pages/JHkim/Main/Components/MainRightStory.scss
+++ b/src/pages/JHkim/Main/Components/MainRightStory.scss
@@ -1,4 +1,4 @@
-.Right-story {
+.RightStory {
   margin-bottom: 20px;
   padding: 10px 20px 0px 20px;
   border: 1px solid #cdcdcd;
@@ -20,7 +20,7 @@
   }
 }
 
-.recommend-story {
+.RecommendStory {
   margin-bottom: 20px;
   padding: 10px 20px 0px 20px;
   border: 1px solid #cdcdcd;
