--- a/src/pages/JHkim/Main/Components/Story.scss
+++ b/src/pages/JHkim/Main/Components/Story.scss
@@ -1,13 +1,13 @@
-.story ul {
+.Story ul {
   display: flex;
   text-align: center;
   justify-content: space-evenly;
-}
 
-.story img {
-  width: 56px;
-  height: 56px;
-  padding: 2px;
-  border: 3px solid red;
-  border-radius: 50%;
+  img {
+    width: 56px;
+    height: 56px;
+    padding: 2px;
+    border: 3px solid red;
+    border-radius: 50%;
+  }
 }
