--- a/src/pages/JHso/Main/components/Feed/Feed.scss
+++ b/src/pages/JHso/Main/components/Feed/Feed.scss
@@ -2,7 +2,7 @@
   width: 400px;
   margin-top: 50px;
   margin-bottom: 30px;
-  .FeedTwo {
+  .newFeed {
     background-color: #ffffff;
     margin-bottom: 100px;
     border: 1px solid #e9e9e9;
