--- a/src/pages/SYha/Login/Login.scss
+++ b/src/pages/SYha/Login/Login.scss
@@ -36,16 +36,6 @@
           font-size: 15px;
         }
       }
-
-      .loginbtn_disabled {
-        background-color: #c4e1fb;
-        border-radius: 10px;
-        height: 50px;
-        width: 360px;
-        border: 1px solid white;
-        color: white;
-        font-size: 20px;
-      }
       .loginbtn {
         background-color: #0095f6;
         border-radius: 10px;
@@ -54,6 +44,9 @@
         border: 1px solid white;
         color: white;
         font-size: 20px;
+      }
+      .disabled {
+        background-color: #c4e1fb;
       }
     }
   }
