--- a/src/pages/JSham/Login/Login.scss
+++ b/src/pages/JSham/Login/Login.scss
@@ -1,48 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 .main {
   align-items: center;
-  box-sizing: border-box;
+  justify-content: center;
   display: flex;
   padding: 0;
-  justify-content: center;
   padding-top: 80px;
+  width: 70%;
+  margin: auto;
 
   .wrap {
-    display: flex;
     border: 1px solid #dbdbdb;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 0 10px;
     padding: 40px 0;
-    display: flex;
-  }
-
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    margin: auto;
+    width: 350px;
   }
 
   h1 {
     text-align: center;
     font-family: 'Lobster';
     font-size: 45px;
-    font-weight: lighter;
-    width: 300px;
     padding-bottom: 30px;
+    margin: 0;
   }
 
-  .id,
-  .password,
+  form {
+    height: 40%;
+    flex-direction: column;
+  }
+  input,
   button {
-    margin: 10px 40px 6px;
-    width: 72%;
+    margin: 10px 10px;
+    width: 70%;
     height: 15%;
   }
 
-  .login {
+  button {
     appearance: none;
     cursor: pointer;
-    display: block;
   }
 
   .hr-sect {
@@ -62,7 +61,7 @@
     height: 1px;
     font-size: 0px;
     line-height: 0px;
-    margin: 0 40px;
+    margin: 0 30px;
   }
 
   .forget {
@@ -77,16 +76,13 @@
   a {
     text-decoration: none;
   }
-  .loginbtn_disabled {
-    background-color: #c4e1fb;
-    border: 1px solid white;
-    color: white;
-    font-size: 20px;
-  }
   .loginbtn {
     background-color: #0095f6;
     border: 1px solid white;
     color: white;
     font-size: 20px;
+  }
+  .disabled {
+    background-color: #c4e1fb;
   }
 }
