Add: 댓글기능추가

--- a/src/pages/SYha/Main/components/Aside_left/Feed.scss
+++ b/src/pages/SYha/Main/components/Aside_left/Feed.scss
@@ -89,7 +89,7 @@
   }
   .comment_wrap {
     overflow: auto;
-    max-height: 40px;
+    max-height: 13%;
   }
   .addcomment {
     font-size: 15px;
